# mycobot_ros

./: .gitignore  README.md  installation_guide.docx  mycobot_toolbox.py
mycobot_280pi/: CMakeLists.txt  package.xml
mycobot_280pi/launch/: aruco_pick.launch  pick_and_place.launch  simple_gui.launch  slider_control.launch
mycobot_280pi/scripts/: aruco_pick.py  listen_real.py  pick_and_place.py  simple_gui.py  slider_control.py
mycobot_control/: CMakeLists.txt  package.xml
mycobot_control/config/: mycobot.yaml
mycobot_control/launch/: communication_service.launch  mycobot_control.launch
mycobot_control/scripts/: mycobot_services.py
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/launch/: load_mycobot.launch
mycobot_description/mycobot_280pi/: mycobot_urdf.urdf  mycobot_with_vision.urdf
mycobot_description/urdf/: mycobot.urdf.xacro  mycobot.xacro
mycobot_gazebo/launch/: mycobot_with_emptyworld.launch  mycobot_with_table.launch
mycobot_moveit/: CMakeLists.txt  package.xml
mycobot_moveit/launch/: demo.launch  move_group.launch  moveit_rviz.launch  ompl.launch.xml  trajectory_execution.launch.xml
opencv_aruco/: CMakeLists.txt  package.xml
opencv_aruco/config/: calibration_matrix.npy  distortion_coefficients.npy
opencv_aruco/launch/: calibrate_camera.launch  pose_estimate.launch
opencv_aruco/scripts/: calibrate_camera.py  generate_aruco_markers.py  generate_print_aruco_markers.py  pose_estimation.py
