<?xml version="1.0"?>
<package format="2">
  <name>mycobot_control</name>
  <version>0.0.0</version>
  <description>The mycobot_control package</description>

  <maintainer email="timkhuang@icloud.com">Kefeng Huang</maintainer>
  <author email="timkhuang@icloud.com">Kefeng Huang</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>