<?xml version="1.0"?>
<package format="2">
  <name>opencv_aruco</name>
  <version>0.1.0</version>
  <description>opencv aruco marker pose estimation</description>

  <maintainer email="timkhuang@icloud.com">Kefeng Huang</maintainer>
  <author email="timkhuang@icloud.com">Kefeng Huang</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
